--- a/html-portfolio/index.html
+++ b/html-portfolio/index.html
@@ -228,7 +228,7 @@
             <div class="mix-block__btn">
               <button type="button" data-filter="all">Все работы</button>
               <button type="button" data-filter=".html">HTML верстка</button>
-              <button type="button" data-filter=".wp">WordPress</button>
+              <button type="button" data-filter=".js">Java Script</button>
             </div>
             <div class="section__portfolio-cards" id="mix-card">
               <div class="project-card mix html">
@@ -263,31 +263,31 @@
                   </div>
                 </div>
               </div>
-              <div class="project-card mix wp">
+              <div class="project-card mix js">
                   <div class="card-img">
-                    <a class="card-link" href="#!">
+                    <a class="card-link" href="../kviz/index.html">
                        <div class="card-img-small">
-                         <img src="./img/portfolioimg/auto1.jpg" alt="Auto" />
+                         <img src="./img/portfolioimg/kviz.png" alt="Auto" />
                           <span>Смотреть проект</span>
                        </div>
-                        <h5 class="title-5">Верстка “Мир Авто”</h5>
-                        <p class="subtitle-portfolio">Верстка многостраничного сайта</p>
+                        <h5 class="title-5">Проект “Квиз”</h5>
+                        <p class="subtitle-portfolio">Проект “Квиз” с применением JS</p>
                     </a>
                   </div>
               </div>
-              <div class="project-card mix wp">
+              <div class="project-card mix js">
                 <div class="card-img">
-                <a class="card-link" href="#!">
+                <a class="card-link" href="../calc/index.html">
                 <div class="card-img-small">
-                  <img src="./img/portfolioimg/auto3.jpg" alt="Auto" />
+                  <img src="./img/portfolioimg/calc.png" alt="Auto" />
                   <span>Смотреть проект</span>
                 </div>
-                <h5 class="title-5">Верстка “Мир Авто”</h5>
-                <p class="subtitle-portfolio">Верстка многостраничного сайта</p>
+                <h5 class="title-5">Проект “Калькулятор”</h5>
+                <p class="subtitle-portfolio">Проект “Калькулятор”</p>
               </a>
             </div>
               </div>
-              <div class="project-card mix wp">
+              <div class="project-card mix js">
                 <div class="card-img">
                 <a class="card-link" href="#!">
                 <div class="card-img-small">
