hides the link to the resume

--- a/html-portfolio/index.html
+++ b/html-portfolio/index.html
@@ -378,10 +378,10 @@
                     <p>Телефон</p>
                     <a href="#!" class="mail">+7 (965) 430-63-53</a>
                   </li>
-                  <li class="contact-item">
+                  <!-- <li class="contact-item">
                     <p></p>
                     <a href="./img/ma.pdf" class="mail">Ссылка на резюме</a>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
               <div class="socials">
