--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
       <h1>My works</h1>
       <div class="wrapper">
         <div class="works">
-          <a class="link" href="./html-portfolio/index.html">HTML Portfolio</a>
+          <a target="_blank" class="link" href="./html-portfolio/index.html">HTML Portfolio</a>
         </div>
         <div class="works">
-          <a class="link" href="./Forest/index.html">Forest Trefal</a>
+          <a target="_blank" class="link" href="./Forest/index.html">Forest Trefal</a>
         </div>
         <div class="works">
-          <a class="link" href="./Unit/index.html">Unit</a>
+          <a target="_blank" class="link" href="./Unit/index.html">Unit</a>
+        </div>
+        <div class="works">
+          <a target="_blank" class="link" href="./kviz/index.html">Kviz</a>
+        </div>
+        <div class="works">
+          <a target="_blank" class="link" href="./calc/index.html">Calculator</a>
         </div>
       </div>
     </div>
