correct & delete html tegs

--- a/Unit/index.html
+++ b/Unit/index.html
@@ -310,144 +310,7 @@
         </div>
       </div>
     </section>
-
-    <section id="clients" class="section-clients">
-      <div class="container">
-        <header class="section-clients_header">
-          <h2 class="section-clients__title title">наши клиенты</h2>
-          <h3 class="subtitle">Что говорят пользователи</h3>
-        </header>
-        <div class="section-clients__slider">
-          <button class="slider__arrow slider__arrow--left" id="sliderPrev">
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-							<g  class="slider__arrow-svg">
-              <path
-                d="M20 12H4"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"/>
-              <path
-                d="M10 18L4 12L10 6"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"/>
-            </svg>
-					</g>
-          </button>
-          <button class="slider__arrow slider__arrow--right" id="sliderNext">
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-							<g  class="slider__arrow-svg">
-              <path
-                d="M4 12H20"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"/>
-              <path
-                d="M14 6L20 12L14 18"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"/>
-							</g>
-            </svg>
-          </button>
-
-          <!-- Слайдер -->
-          <div class="slider owl-carousel owl-theme" id="clients-slider">
-            <!-- Слайдер item -->
-            <div class="slider-item">
-              <div class="slider-item__text">
-                <p>
-                  Это потрясающее приложение которое помогло мне завершить все
-                  мои дела, и сделать дипломный проект раньше срока.
-                </p>
-              </div>
-              <div class="slider-item__autor">
-                <div class="slider-item__avatar">
-                  <img src="./img/users/myFoto.jpg" alt="Avatar" />
-                </div>
-                <div class="slider-item__autor-desc">
-                  <span class="slider-item__autor-title">Фрилансер</span>
-                  <span class="slider-item__autor-name">Макунин Александр</span>
-                </div>
-              </div>
-            </div>
-            <!--// Слайдер item -->
-
-            <!-- Слайдер item -->
-            <div class="slider-item">
-              <div class="slider-item__text">
-                <p>
-                  Это потрясающее приложение которое помогло мне завершить все
-                  мои дела, и сделать дипломный проект раньше срока.
-                </p>
-              </div>
-              <div class="slider-item__autor">
-                <div class="slider-item__avatar">
-                  <img src="./img/users/foto.jpg" alt="Avatar" />
-                </div>
-                <div class="slider-item__autor-desc">
-                  <span class="slider-item__autor-title">Фрилансер</span>
-                  <span class="slider-item__autor-name">Николай Остапов</span>
-                </div>
-              </div>
-            </div>
-            <!-- //Слайдер item -->
-
-            <!-- Слайдер item -->
-            <div class="slider-item">
-              <div class="slider-item__text">
-                <p>
-                  Это потрясающее приложение которое помогло мне завершить все
-                  мои дела, и сделать дипломный проект раньше срока.
-                </p>
-              </div>
-              <div class="slider-item__autor">
-                <div class="slider-item__avatar">
-                  <img src="./img/users/foto.jpg" alt="Avatar" />
-                </div>
-                <div class="slider-item__autor-desc">
-                  <span class="slider-item__autor-title">Фрилансер</span>
-                  <span class="slider-item__autor-name">Николай Остапов</span>
-                </div>
-              </div>
-            </div>
-            <!--// Слайдер item -->
-
-            <!-- Слайдер item -->
-            <div class="slider-item">
-              <div class="slider-item__text">
-                <p>
-                  Это потрясающее приложение которое помогло мне завершить все
-                  мои дела, и сделать дипломный проект раньше срока.
-                </p>
-              </div>
-              <div class="slider-item__autor">
-                <div class="slider-item__avatar">
-                  <img src="./img/users/foto.jpg" alt="Avatar" />
-                </div>
-                <div class="slider-item__autor-desc">
-                  <span class="slider-item__autor-title">Фрилансер</span>
-                  <span class="slider-item__autor-name">Николай Остапов</span>
-                </div>
-              </div>
-            </div>
-            <!--// Слайдер item -->
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <footer class="footer none">
+    <footer class="footer">
       <div class="container">
         <div class="footer__row">
           <nav class="footer__nav">
