--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a target="_blank" class="link" href="./html-portfolio/index.html">HTML Portfolio</a>
         </div>
         <div class="works">
-          <a target="_blank" class="link" href="./Forest/index.html">Forest Trefal</a>
+          <a target="_blank" class="link" href="./Forest/index.html">Forest Travel</a>
         </div>
         <div class="works">
           <a target="_blank" class="link" href="./Unit/index.html">Unit</a>
