add new prohect

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <div class="works">
           <a target="_blank" class="link" href="./calc/index.html">Calculator</a>
         </div>
+        <div class="works">
+          <a target="_blank" class="link" href="./pizza/index.html">Pizza</a>
+        </div>
       </div>
     </div>
   </body>
