add Cloud project in index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <div class="works">
           <a target="_blank" class="link" href="./pizza/index.html">Pizza</a>
         </div>
+        <div class="works">
+          <a target="_blank" class="link" href="./Cloud/index.html">Cloud - Landing Page</a>
+        </div>
       </div>
     </div>
   </body>
