--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a target="_blank" class="link" href="./Cloud/index.html">Cloud - Landing Page</a>
         </div> -->
         <div class="works">
-          <a target="_blank" class="link" href="./Pumps/Main-page/index.html">Cloud - Landing Page</a>
+          <a target="_blank" class="link" href="./Pump/Main-page/index.html">Cloud - Landing Page</a>
         </div>
       </div>
     </div>
