--- a/Pump/Main-page/index.html
+++ b/Pump/Main-page/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="../reset.css">
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="../reset.css" />
   </head>
   <body>
     <div id="root">
@@ -17,7 +17,7 @@
                 ><img src="./logo.png" alt=""
               /></a>
             </div>
-            <div class="header_nav-items__bfXCq">
+            <div  class="header_nav-items__bfXCq">
               <ul>
                 <a href="../Page-One/index.html"><li>Aqua Mini</li></a
                 ><a href="../Page-Two/index.html"><li>Maxi Orange</li></a
@@ -33,7 +33,7 @@
       <div class="main_main__A4cSK">
         <div class="container">
           <div class="main_desc__b6w1q">
-            <img src="./aspen-brand-light.png" alt="">
+            <img src="./aspen-brand-light.png" alt="" />
             <h1>Дренажные помпы Aspen по оптовым ценам</h1>
           </div>
         </div>
