--- a/Pump/Contact/index.html
+++ b/Pump/Contact/index.html
@@ -22,7 +22,7 @@
               <ul>
                 <a href="../Page-one/index.html"><li>Aqua Mini</li></a
                 ><a href="../Page-Two/index.html"><li>Maxi Orange</li></a
-                ><a href="../Page-Three/index.html"><li>Maxi Hi Flow</li></a
+                ><a href="../Page-Three/index.html"><li>Max Hi Flow</li></a
                 ><a href="../Page-Four/index.html"><li>Mini Blank</li></a
                 ><a href="../Page-Five/index.html"><li>Mini Tank</li></a
                 ><a href="../Contact/index.html"><li>Контакты</li></a>
@@ -34,8 +34,8 @@
         <div>
             <div class="container">
                 <div class="contact-info">
-                    <h1>Телефон: +7 903 927 01 01</h1>
-                    <h1>Электронная почта: sale@aspen-pumps.ru</h1>
+                    <h1>+7 903 927 01 01</h1>
+                    <h1>sale@aspen-pumps.ru</h1>
                 </div>
             </div>
         </div>
@@ -44,8 +44,7 @@
             <div class="footer_contact__SF9bl ">
                 <h2>Контакты</h2>
                 <ul>
-                  <a href=""><li>Телефон: +7 903 927 01 01</li></a
-                  ><a href=""><li>Электронная почта: sale@aspen-pumps.ru</li></a>
+                  <a href=""><li>+7 903 927 01 01 sale@aspen-pumps.ru</li></a>
                 </ul>
               </div>
         </div>
