--- a/Pump/Page-Four/index.html
+++ b/Pump/Page-Four/index.html
@@ -60,10 +60,7 @@
       <div class="footer_footer__wz-el">
         <div class="container">
           <div class="footer_contact__SF9bl">
-            <h2>Контакты</h2>
-            <ul>
-              <a href=""><li>+7 903 927 01 01 sale@aspen-pumps.ru</li></a>
-            </ul>
+            <h2>Контакты: +7 903 927 01 01 sale@aspen-pumps.ru</h2>
           </div>
         </div>
       </div>
