--- a/Pump/Contact/index.html
+++ b/Pump/Contact/index.html
@@ -41,12 +41,9 @@
         </div>
       <div class="footer_footer__wz-el footer-contact">
         <div class="container">
-            <div class="footer_contact__SF9bl ">
-                <h2>Контакты</h2>
-                <ul>
-                  <a href=""><li>+7 903 927 01 01 sale@aspen-pumps.ru</li></a>
-                </ul>
-              </div>
+          <div class="footer_contact__SF9bl">
+            <h2>Контакты: +7 903 927 01 01 sale@aspen-pumps.ru</h2>
+          </div>
         </div>
       </div>
     </div>
