--- a/Pump/Page-Three/index.html
+++ b/Pump/Page-Three/index.html
@@ -57,7 +57,7 @@
       <div class="footer_footer__wz-el">
         <div class="container">
           <div class="footer_contact__SF9bl">
-            <h2>Контакты: +7 903 927 01 01 sale@aspen-pumps.ru</h2>
+            <h2> +7 903 927 01 01 sale@aspen-pumps.ru</h2>
           </div>
         </div>
       </div>
