--- a/Pump/Page-Five/index.html
+++ b/Pump/Page-Five/index.html
@@ -13,7 +13,7 @@
         <div class="container">
           <nav class="header_nav__3YBcv">
             <div class="header_logo__yR5M6">
-              <a href="../Main-page/index.html"
+              <a href="../index.html"
                 ><img src="./logo.png" alt=""
               /></a>
             </div>
