--- a/Pump/Contact/index.html
+++ b/Pump/Contact/index.html
@@ -14,7 +14,7 @@
         <div class="container">
           <nav class="header_nav__3YBcv">
             <div class="header_logo__yR5M6">
-              <a href="../Main-page/index.html"
+              <a href="../index.html"
                 ><img src="../Page-one/logo.png" alt=""
               /></a>
             </div>
