--- a/Pump/index.html
+++ b/Pump/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./main.css" />
-    <link rel="stylesheet" href="../reset.css" />
+    <link rel="stylesheet" href="./Main-page/main.css" />
+    <link rel="stylesheet" href="./reset.css" />
   </head>
   <body>
     <div id="root">
@@ -13,18 +13,18 @@
         <div class="container">
           <nav class="header_nav__3YBcv">
             <div class="header_logo__yR5M6">
-              <a href="../Main-page/index.html"
-                ><img src="./logo.png" alt=""
+              <a href="./index.html"
+                ><img src="./Main-page/logo.png" alt=""
               /></a>
             </div>
             <div  class="header_nav-items__bfXCq">
               <ul>
-                <a href="../Page-one/index.html"><li>Aqua Mini</li></a
-                ><a href="../Page-Two/index.html"><li>Maxi Orange</li></a
-                ><a href="../Page-Three/index.html"><li>Max Hi Flow</li></a
-                ><a href="../Page-Four/index.html"><li>Mini Blank</li></a
-                ><a href="../Page-Five/index.html"><li>Mini Tank</li></a
-                ><a href="../Contact/index.html"><li>Контакты</li></a>
+                <a href="./Page-one/index.html"><li>Aqua Mini</li></a
+                ><a href="./Page-Two/index.html"><li>Maxi Orange</li></a
+                ><a href="./Page-Three/index.html"><li>Max Hi Flow</li></a
+                ><a href="./Page-Four/index.html"><li>Mini Blank</li></a
+                ><a href="./Page-Five/index.html"><li>Mini Tank</li></a
+                ><a href="./Contact/index.html"><li>Контакты</li></a>
               </ul>
             </div>
           </nav>
@@ -33,7 +33,7 @@
       <div class="main_main__A4cSK">
         <div class="container">
           <div class="main_desc__b6w1q">
-            <img src="./aspen-brand-light.png" alt="" />
+            <img src="./Main-page/aspen-brand-light.png" alt="" />
             <h1>Дренажные помпы Aspen по оптовым ценам</h1>
           </div>
         </div>
