--- a/p-2/energy-storage.html
+++ b/p-2/energy-storage.html
@@ -108,28 +108,28 @@
             </a>
             <div class="logo-menu">
                 <a class="logo-menu-block">
-                    <img src="/images/top1.png" alt="">
+                    <img src="./images/top1.png" alt="">
                 </a>
                 <a class="logo-menu-block">
-                    <img src="/images/top2.png" alt="">
+                    <img src="./images/top2.png" alt="">
                 </a>
                 <a class="logo-menu-block">
-                    <img src="/images/top3.png" alt="">
+                    <img src="./images/top3.png" alt="">
                 </a>
                 <a class="logo-menu-block">
-                    <img src="/images/top4.png" alt="">
+                    <img src="./images/top4.png" alt="">
                 </a>
                 <a class="logo-menu-block">
-                    <img src="/images/top4.png" alt="">
+                    <img src="./images/top4.png" alt="">
                 </a>
                 <a class="logo-menu-block">
-                    <img src="/images/top5.gif" alt="">
+                    <img src="./images/top5.gif" alt="">
                 </a>
                 <a class="logo-menu-block">
-                    <img src="/images/top6.png" alt="">
+                    <img src="./images/top6.png" alt="">
                 </a>
                 <a class="logo-menu-block">
-                    <img src="/images/top7.png" alt="">
+                    <img src="./images/top7.png" alt="">
                 </a>
 
             </div>
@@ -277,7 +277,7 @@
                                             <div class="textblock--inner is-flex appear-text">
 
                                                 <div class="textblock--img-wrap">
-                                                    <img class="textblock--img" width="600" height="600" src="data:image/svg+xml,%3Csvg%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%20600%20600&#x27;%3E%3C/svg%3E" alt="Elcogen image - " data-lazy-src="/images/main-img.png"><noscript><img class="textblock--img" width="600" height="600" src="images/main-img.png" alt="Elcogen image - "></noscript>
+                                                    <img class="textblock--img" width="600" height="600" src="data:image/svg+xml,%3Csvg%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%20600%20600&#x27;%3E%3C/svg%3E" alt="Elcogen image - " data-lazy-src="./images/main-img.png"><noscript><img class="textblock--img" width="600" height="600" src="./images/main-img.png" alt="Elcogen image - "></noscript>
                                                 </div>
                                                 <div class="textblock--content">
                                                     <div class="textblock--content-inner">
