--- a/p-2/energy-storage.html
+++ b/p-2/energy-storage.html
@@ -103,7 +103,7 @@
     <div id="logo" class="logo">
         <div class="logo-left">
             <a href="https://elcogen.com" class="main-logo">
-                <img src="/images/logo.png" alt="">
+                <img src="./images/logo.png" alt="">
                 SEG Program
             </a>
             <div class="logo-menu">
@@ -144,18 +144,18 @@
                 <div class="menu-col--inner">
                     <div class="menu-block">
                         <a href="#" class="modal-btn" data-modal="menu-products">
-                            <img src="/images/menu1.png" alt="">
+                            <img src="./images/menu1.png" alt="">
                         </a>
                     </div><!-- single menu item -->
                     <div class="menu-block">
                         <a href="#" class="modal-btn active-parent" data-modal="menu-industries">
-                            <img src="/images/menu2.png" alt="">
+                            <img src="./images/menu2.png" alt="">
                             <p>Отрасли</p>
                         </a>
                     </div><!-- single menu item -->
                     <div class="menu-block">
                         <a href="#" class="modal-btn" data-modal="menu-sustainability">
-                            <img src="/images/menu3.png" alt="">
+                            <img src="./images/menu3.png" alt="">
                             <p>Проекты</p>
                         </a>
                     </div><!-- single menu item -->
@@ -163,7 +163,7 @@
             </div><!-- menu cols -->
             <div class="main-menu">
                 <div class="burger modal-btn main-burger" data-modal="menu-main">
-                    <img src="/images/menu4.png" alt="">
+                    <img src="./images/menu4.png" alt="">
                 </div>
                 <div class="mobilemenu-nav secondary-burger">
                     <div class="mobilemenu-nav--inner is-flex">
@@ -188,13 +188,13 @@
                 <div class="menu-col--inner">
                     <div class="menu-block">
                         <a href="#" class="modal-btn" data-modal="menu-technology">
-                            <img src="/images/menu5.png" alt="">
+                            <img src="./images/menu5.png" alt="">
                             <p>Офисы</p>
                         </a>
                     </div><!-- single menu item -->
                     <div class="menu-block">
                         <a href="#" class="modal-btn" data-modal="menu-contactus">
-                            <img src="/images/menu6.png" alt="">
+                            <img src="./images/menu6.png" alt="">
                             <p>
                                 CEC <br>
                                 Exchange
@@ -203,7 +203,7 @@
                     </div><!-- single menu item -->
                     <div class="menu-block">
                         <a href="#" class="modal-btn" data-modal="menu-search">
-                            <img src="/images/menu7.png" alt="">
+                            <img src="./images/menu7.png" alt="">
                             <p>Связанные</p>
                         </a>
                     </div><!-- single menu item -->
@@ -483,7 +483,7 @@
                     </div>
                     
                 </section>
-                <section class="hidden-class">
+                <section style="left: -200px;" class="hidden-class">
                     <div class="section--inner none">
                         <div class="fade-content">
                             <div class="fade-content--title">
@@ -504,7 +504,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="hidden-class">
+                <section style="left: -740px;" class="hidden-class">
                     <div class="section--inner none">
                         <div class="fade-content">
                             <div class="fade-content--title">
@@ -738,7 +738,7 @@
 
 
 
-                <footer data-bgcolor data-textcolor class="section footer-section full white-logo" data-scroll data-scroll-offset="10%">
+                <footer style="left: -740px;" data-bgcolor data-textcolor class="section footer-section full white-logo" data-scroll data-scroll-offset="10%">
                     <div class="floating-socials office-socials">
                         <a class="social-icon" href="https://www.linkedin.com/company/elcogen" target="_blank">
                             <span class="social-icon--holder linkedin"></span>
@@ -763,7 +763,7 @@
                                     <div class="footer-contacts column columns">
                                         <div class="column footer-col">
                                             <div class="map-block">
-                                                <img src="/images/icon1.png" alt="">
+                                                <img src="./images/icon1.png" alt="">
                                                 <p>
                                                     Expand the map to explore
                                                 </p>
@@ -774,40 +774,40 @@
                                         </div>
                                         <div class="column footer-col">
                                             <div class="map-block">
-                                                <img src="/images/icon2.png" alt="">
+                                                <img src="./images/icon2.png" alt="">
                                                 <p>
                                                     Online installation
                                                 </p>
                                             </div>
                                             <a href="https://www.britannica.com/place/Estonia" class="office-location">
-                                                <img src="/images/flag2.png" alt="">
+                                                <img src="./images/flag2.png" alt="">
                                             </a>
                                         </div>
                                         <a class="column footer-col">
                                             <div class="map-block">
-                                                <img src="/images/icon3.png" alt="">
+                                                <img src="./images/icon3.png" alt="">
                                                 <p>
-                                                    If you are a B2B equipment manufacturer, please attach your application
+                                                    If .you are a B2B equipment manufacturer, please attach your application
                                                 </p>
                                             </div>
                                             <a href="https://www.topuniversities.com/where-to-study/europe/bulgaria/guide" class="office-location">
-                                                <img src="/images/flag3.png" alt="">
+                                                <img src="./images/flag3.png" alt="">
                                             </a>
                                         </div>
                                         <div class="column footer-col">
                                             <div class="map-block">
-                                                <img src="/images/icon4.png" alt="">
+                                                <img src="./images/icon4.png" alt="">
                                                 <p>
                                                     Text us
                                                 </p>
                                             </div>
                                             <a href="https://kids.nationalgeographic.com/geography/countries/article/spain" class="office-location">
-                                                <img src="/images/flag4.png" alt="">
+                                                <img src="./images/flag4.png" alt="">
                                             </a>
                                         </div>
                                         <div class="column footer-col">
                                             <a href="https://theculturetrip.com/europe/georgia/articles/13-interesting-facts-about-georgia/" class="office-location">
-                                                <img src="/images/flag5.png" alt="">
+                                                <img src="./images/flag5.png" alt="">
                                             </a>
                                         </div>
 
