--- a/p-2/energy-storage.html
+++ b/p-2/energy-storage.html
@@ -508,7 +508,7 @@
                     <div class="section--inner none">
                         <div class="fade-content">
                             <div class="fade-content--title">
-                                <div class="country" style="height: 880px; overflow-y: scroll;">
+                                <div class="country">
                                     <h3 style="font-size: 24px; margin-bottom: 0px;">-Europe-</h3>
                                     <ul style="list-style:disc; line-height: 40px; padding-left: 20px;">
                                         <li>Austria: €0.09/ €0.12</li>
