добавил нову стриницу

--- a/p-2/energy-storage.html
+++ b/p-2/energy-storage.html
@@ -606,6 +606,144 @@
                     </div>
                 </section>
 
+            </section>
+            <section style="left: -800px;" class="hidden-class">
+                <div class="section--inner none">
+                    <div class="fade-content">
+                        <div class="fade-content--title">
+                            <p style="margin-top: 330px; width: 750px; margin-left: 300px;">Выберите на карте уже работающий регион, подключите оборудование для производства солнечной или ветровой энергетики, чтобы получать свои киловатт- активы (NFT) прямо сейчас!
+                                </p>
+                                <img style="display: block; margin-left: 304px; margin-top: 150px;" src="./images/Рисунок21.png" alt="">
+                        </div>
+                            <div class="fade-slide single-content">
+                                <div class="content-slide--inner columns">
+                                    <div class="column"></div>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="fade-slider">
+                        <div class="img-bg fade-slide">
+                            <img class="single-slide--img" src="./images/img_page/Рисунок2.png">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section style="left: -1100px;" class="hidden-class">
+                <div class="section--inner none">
+                    <div class="fade-content">
+                        <div class="fade-content--title">
+                            <div class="country" style="overflow: unset; width: 720px;">
+                                <h3>Выберите Пакет оборудования, который соответствует крыше или участку, получите информацию на Ваш mail:
+                                </h3>
+                                <h4 style="text-align: center;">Small Capacities / Individuals / Households / Solar Generation:
+                                </h4>
+                                <form>
+                                    <label>
+                                      <input type="checkbox" name="languages" value="Участки/ Продажа">
+                                      Package 35 kW / Rental payment - 10 kW or 3,000.00 ($/€/£/n) per year
+                                    </label>
+                                    <br>
+                                    <label>
+                                      <input type="checkbox" name="languages" value="Участки/ Кооперации">
+                                      Package 50 kW / Rental payment - 15 kW or 4,500.00 ($/€/£/n) per yearx
+                                    </label>
+                                    <br>
+                                    <label>
+                                      <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                      Package 70 kW / Rental payment - 20 kW or 6,000.00 ($/€/£/n) per year
+                                    </label>
+                                    <br>
+                                    <label>
+                                      <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                      Package 100 kW / Rental payment - 30 kW or 9,000.00 ($/€/£/n) per year
+                                    </label>
+                                  </form>
+                                  <h4 style="text-align: center; margin-top: 30px;">Medium Capacities / Legal Entities / Solar and Wind Generation:
+                                </h4>
+                                <form>
+                                    <label>
+                                      <input type="checkbox" name="languages" value="Участки/ Продажа">
+                                      Package 100 kW / Rental payment - 30 kW or 9,000.00 ($/€/£/n) per year
+                                    </label>
+                                    <br>
+                                    <label>
+                                      <input type="checkbox" name="languages" value="Участки/ Кооперации">
+                                      Package 200 kW / Rental payment - 60 kW or 18,000.00 ($/€/£/n) per year
+                                    </label>
+                                    <br>
+                                    <label>
+                                      <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                      Package 300 kW / Rental payment - 90 kW or 27,000.00 ($/€/£/n) per year
+                                    </label>
+                                    <br>
+                                    <label>
+                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                        Package 400 kW / Rental payment - 120 kW or 36,000.00 ($/€/£/n) per year
+                                    </label>
+                                    <br>
+                                    <label>
+                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                        Package 500 kW / Rental payment - 150 kW or 45,000.00 ($/€/£/n) per year
+                                    </label>
+                                    <br>
+                                    <label>
+                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                        Package 600 kW / Rental payment - 180 kW or 54,000.00 ($/€/£/n) per year
+                                    </label>
+                                    <br>
+                                    <label>
+                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                        Package 600 kW / Rental payment - 180 kW or 54,000.00 ($/€/£/n) per year
+                                    </label>
+                                    <br>
+                                    <label>
+                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                        Package 700 kW / Rental payment - 210 kW or 63,000.00 ($/€/£/n) per year
+                                    </label>
+                                    <br>
+                                    <label>
+                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                        Package 800 kW / Rental payment - 240 kW or 72,000.00 ($/€/£/n) per year
+                                    </label>
+                                    <br>
+                                    <label>
+                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                        Package 900 kW / Rental payment - 270 kW or 81,000.00 ($/€/£/n) per year
+                                    </label>
+                                    <br>
+                                    <label>
+                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                        Package 1,000 kW / Rental payment - 300 kW or 90,000.00 ($/€/£/n) per year
+                                    </label>
+                                  </form>
+                                  <h4 style="text-align: center; margin-top: 30px;">Farm / Legal Entity / Solar and Wind Generation:
+                                </h4>
+                                <form>
+                                    <label>
+                                      <input type="checkbox" name="languages" value="Участки/ Продажа">
+                                      Package 3,300 kW (Farm) / Rental payment - 990 kW or 297,000.00 ($/€/£/n) per yea
+                                    </label>
+                                  </form>
+                                  <div style="margin-left: 200px; padding-top: 10px;">
+                                    <img src="./images/Рисунок21.png" alt="">
+                                    <p style="font-size: 14px; line-height: 0px;">Отправить информацию</p>
+                                  </div>
+                            </div>
+                        </div>
+                            <div class="fade-slide single-content">
+                                <div class="content-slide--inner columns">
+                                    <div class="column"></div>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="fade-slider">
+                        <div class="img-bg fade-slide">
+                            <img class="single-slide--img" src="./images/img_page/Рисунок112.png">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
                 <section data-bgcolor class="gsap-slider section is-hidden-desktop" data-textcolor="#fff">
                     <div class="mobile-slider">
                         <div class="mobile-slider--inner">
@@ -738,7 +876,7 @@
 
 
 
-                <footer style="left: -740px;" data-bgcolor data-textcolor class="section footer-section full white-logo" data-scroll data-scroll-offset="10%">
+                <footer style="left: -1240px;" data-bgcolor data-textcolor class="section footer-section full white-logo" data-scroll data-scroll-offset="10%">
                     <div class="floating-socials office-socials">
                         <a class="social-icon" href="https://www.linkedin.com/company/elcogen" target="_blank">
                             <span class="social-icon--holder linkedin"></span>
